<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LastMileFragment">

    <TextView
        android:id="@+id/tv_loss_rate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_44"
        android:background="@drawable/bg_content_main"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_15"
        android:text="@string/Loss_rate"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/tv_last_mile_delay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="11" />

    <ProgressBar
        android:id="@+id/pb_loss_rate"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintBottom_toBottomOf="@id/tv_loss_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_loss_rate" />

    <TextView
        android:id="@+id/tv_loss_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_loss_rate"
        app:layout_constraintEnd_toStartOf="@id/tv_loss_rate_unit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_loss_rate"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/tv_loss_rate_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/percent"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_loss_rate_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_loss_rate_value" />


    <TextView
        android:id="@+id/tv_last_mile_delay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_content_main"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_15"
        android:text="@string/Last_mile_delay"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/tv_network_status_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loss_rate"
        app:layout_constraintVertical_weight="11" />

    <ProgressBar
        android:id="@+id/pb_last_mile_delay"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintBottom_toBottomOf="@id/tv_last_mile_delay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_last_mile_delay" />

    <TextView
        android:id="@+id/tv_last_mile_delay_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_last_mile_delay"
        app:layout_constraintEnd_toStartOf="@id/tv_last_mile_delay_unit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_last_mile_delay"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/tv_last_mile_delay_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/ms"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_last_mile_delay_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_last_mile_delay_value" />


    <TextView
        android:id="@+id/tv_network_status_assessment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_content_main"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_15"
        android:text="@string/Overall_network_status_assessment"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@+id/tv_btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_mile_delay"
        app:layout_constraintVertical_weight="16" />

    <ProgressBar
        android:id="@+id/pb_network_status_assessment"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        app:layout_constraintBottom_toBottomOf="@id/tv_network_status_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_network_status_assessment" />

    <ImageView
        android:id="@+id/iv_network_status_assessment_result"
        android:layout_width="@dimen/dp_77"
        android:layout_height="@dimen/dp_77"
        android:layout_marginStart="@dimen/dp_81"
        app:layout_constraintBottom_toBottomOf="@id/tv_network_status_assessment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_network_status_assessment"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/tv_network_status_assessment_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_9"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_network_status_assessment_result"
        app:layout_constraintStart_toEndOf="@id/iv_network_status_assessment_result"
        app:layout_constraintTop_toTopOf="@id/iv_network_status_assessment_result" />

    <TextView
        android:id="@+id/tv_btn_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/slt_join"
        android:gravity="center"
        android:text="@string/OK"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_network_status_assessment" />

</android.support.constraint.ConstraintLayout>